--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "renpho",
-  "name": "Renpho Smart Scale",
+  "name": "Renpho",
   "documentation": "https://github.com/antoinebou12/hass_renpho",
+  "issue_tracker": "https://github.com/antoinebou12/hass_renpho/issues",
   "dependencies": [],
   "codeowners": ["@antoinebou12"],
-  "requirements": ["pycryptodome>=3.3.1", "requests"],
-  "iot_class": "local_polling",
+  "requirements": ["pycryptodome>=3.3.1", "requests", "aiohttp>=3.6.1", "voluptuous>=0.11.7"],
+  "iot_class": "cloud_polling",
   "version": "1.0.0",
   "config_flow": true
 }
