--- a/.github/workflows/hacs-workflow.yml
+++ b/.github/workflows/hacs-workflow.yml
@@ -15,6 +15,6 @@ jobs:
       - name: HACS validation
         uses: "hacs/action@main"
         with:
-          category: "Health"
+          category: "Integration"
       - uses: "actions/checkout@v3"
       - uses: "home-assistant/actions/hassfest@master"
