--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
+        if: false
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
