--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,3 +3,12 @@ uvicorn
 httpx
 jinja2
 pydantic
+fastapi
+uvicorn
+aiohttp
+pydantic
+python-multipart
+cryptography
+pyjwt
+python-dotenv
+pycryptodome
