--- a/custom_components/renpho/manifest.json
+++ b/custom_components/renpho/manifest.json
@@ -6,14 +6,14 @@
   "dependencies": [],
   "codeowners": ["@neilzilla", "@antoinebou12"],
   "requirements": [
-    "pycryptodome>=3.3.1",
-    "requests>=2.25.0",
-    "aiohttp>=3.6.1",
-    "voluptuous>=0.11.7",
+    "pycryptodome",
+    "requests",
+    "aiohttp",
+    "voluptuous",
     "pydantic",
     "aiohttp_socks"
   ],
   "iot_class": "cloud_polling",
-  "version": "3.0.1",
+  "version": "3.0.0",
   "config_flow": true
 }
