--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: antoinebou12
-custom: https://www.buymeacoffee.com/antoineboucher
+github: neilzilla
+custom: https://ko-fi.com/neilgaryallen
